# PUSH-YCLIENT-TG-MAX-WHATSAPP

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/message-template-configurator/: requirements.md
.kiro/specs/service-setup-wizard/: .config.kiro  requirements.md
.kiro/specs/yclients-notification-bot/: .config.kiro  design.md  requirements.md  tasks.md
.stfolder/: syncthing-folder-f25052.txt
app/: __init__.py  config.py  database.py  main.py
app/adapters/: __init__.py  base.py  max_adapter.py  telegram_adapter.py  whatsapp_adapter.py
app/admin/: __init__.py
app/admin/templates/: base.html  dashboard.html  notification_log.html  templates_editor.html
app/api/: admin.py  health.py  metrics.py  webhook.py
app/models/: __init__.py  client.py  mixins.py  notification.py  task.py  template.py
app/schemas/: client.py  enums.py  notification.py  task.py  template.py  yclients.py
app/services/: action_handler.py  client_registry.py  dispatcher.py  notification_service.py  template_engine.py  yclients_client.py
app/tasks/: __init__.py  celery_app.py  cleanup_tasks.py  notification_tasks.py  scheduler_tasks.py
app/utils/: logging.py  rate_limiter.py  security.py
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 001_initial_schema.py
tests/: conftest.py
tests/integration/: __init__.py  test_webhook.py
tests/property/: __init__.py  test_properties.py
tests/unit/: __init__.py  test_client_registry.py  test_dispatcher.py  test_security.py  test_template_engine.py
