[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "yclients-notification-bot"
version = "1.0.0"
description = "Production-ready notification bot for YClients CRM — Telegram, WhatsApp, MAX"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    # Task queue
    "celery[redis]==5.4.0",
    "redis==5.0.4",
    # Telegram
    "aiogram==3.7.0",
    # HTTP client
    "httpx==0.27.0",
    # Configuration
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.7.1",
    "python-dotenv==1.0.1",
    # Logging
    "structlog==24.2.0",
    # Rate limiting
    "slowapi==0.1.9",
    # Security / JWT
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    # Templates
    "jinja2==3.1.4",
    # Prometheus metrics
    "prometheus-client==0.20.0",
    # Utilities
    "python-multipart==0.0.9",
    "orjson==3.10.3",
    "pytz==2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "hypothesis==6.103.0",
    "factory-boy==3.3.0",
    "faker==25.2.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
